--- a/0introduction.tex
+++ b/0introduction.tex
@@ -52,7 +52,7 @@ Given a database schema $\sigma$, let $R$ be a relation name in $\sigma$ with ar
 
 A \emph{relation} or \emph{relation instance} over $R$ is defined as a finite set of facts over $R$.
 
-A \emph{database} $I$ over database schema $\sigma$ is a union \margp{a $\to$ an}{ sprawdziłem że jest \emph{a union}} of relations over $R$, where $R \in \sigma$. 
+A \emph{database} $\bf{I}$ over database schema $\sigma$ is a union \margp{a $\to$ an}{ sprawdziłem że jest \emph{a union}} of relations over $R$, where $R \in \sigma$. 
 
 \end{defn}
 
